# aws_costsavings

./: README.md  pyproject.toml
tests/: test_aws_costsavings.py
