[tool.poetry]
name = "aws_costsavings"
version = "0.1.0"
description = ""
authors = ["debswade <deborah.wade@hivehome.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/debswade/aws_costsavings"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
